fixed side div length when window was wide and short. re-added z-index adjustments.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .hide {
-  opacity: 0;
+  display: none;
 }
 
 #left {
@@ -120,6 +120,7 @@ p {
   margin-left: -80px;
   cursor: default;
   z-index: -1;
+  opacity: 0;
 }
 .info a {
   color: rgba(255, 255, 255, .8);
@@ -210,5 +211,21 @@ button:hover {
 #jamdog {
   position: absolute;
   z-index: 100;
+}
+
+@media screen and (max-width: 560px) {
+ #left {
+  float: none;
+  height: 150px;
+  width: 100%;
+  position: absolute;
+ }
+ h1 {
+  margin-top: 0;
+ }
+ h3 {
+  margin-top: 20px;
+  font-size: 10px;
+ }
 }
 
